samples/_failures_safe/1761659347_286f43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd924503.c: In function ‘main’:
./samples/SAFE/__tmp_cd924503.c:156:13: error: expected declaration or statement at end of input
  156 |             printf("Cannot add matrices: dimensions must match\n");
      |             ^~~~~~
./samples/SAFE/__tmp_cd924503.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cd924503.c:156:13: error: expected declaration or statement at end of input
